# agentic

./: .gitignore  AGENT.md  Dockerfile.sandbox  PLAN.md  README-old.md  README.md  Skills.md  TODO.md  memory_overview.md  pyproject.toml  resume.sh  test.py
agentic/: __init__.py  main.py
agentic/core/: agent.py  config.py  context.py  conversation.py  llm.py
agentic/hooks/: events.py  manager.py
agentic/kernel/: config.py  manager.py  result.py  tool.py  worker.py
agentic/mcp/: bridge.py  client.py
agentic/memory/: manager.py  tool.py  types.py
agentic/permissions/: manager.py
agentic/sandbox/: docker_sandbox.py  sandboxed_bash.py  sandboxed_file_tools.py
agentic/scheduling/: manager.py
agentic/sdk/: __init__.py  agent.py  events.py  handlers.py  tool_decorator.py
agentic/sdk/integrations/: __init__.py  fastapi.py
agentic/skills/: manager.py  runner.py
agentic/skills/builtin/: init.yaml  review.yaml  (+3 more)
agentic/tools/: agent_tool.py  base.py  bash.py  file_tools.py  notification.py  registry.py  search_tools.py  task_tools.py  web_tools.py
agentic/ui/: completions.py  renderer.py  repl.py
benchmarks/: feedback_loop_plan.md  run_swebench.py
benchmarks/swebench/: benchmark_agent.py  git_utils.py  loader.py  prompt.py  report.py  runner.py  validating_tools.py
examples/: sdk_basic.py  sdk_customer_support.py
examples/sdk_fastapi/: app.py
specs/: python_kernel_spec.md
tests/unit/: test_benchmark_harness.py  test_config.py  test_kernel.py  test_llm.py  test_memory.py  test_permissions.py  test_sandbox.py  test_skills.py  test_tools.py
(+1 files in other folders)
