[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic"
version = "0.1.0"
description = "Autonomous coding agent with memory, skills, MCP, and context summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pygments>=2.18.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
]
benchmark = [
    "datasets>=2.20.0",
    "swebench>=3.0.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
]

[project.scripts]
agentic = "agentic.main:app"

[tool.hatch.build.targets.wheel]
packages = ["agentic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
